Changed to Roboto font
Replaced the ugly fonts used in TWEB with Roboto which is less ugly

--- a/tweb-redesign.css
+++ b/tweb-redesign.css
@@ -3,6 +3,7 @@
 /*      Based on @RisingFire redesign    */
 body {
     background: #1B2735;
+    font-family: 'Roboto', sans-serif;
 }
 .tg_head_split {
     max-width: none;
